<resources>
    <string name="app_name">NewsApplication</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text1">Join CNN News And Updates Today</string>
    <string name="welcome_text2">Login Or Register For Most Recent News Ands Updates</string>
    <string name="welcome_text3">Latest Technology News Updates, innovation and Future Perspective</string>
    <string name="welcome_sports">Latest Sports News And Updates</string>
    <string name="welcome_text5">Politics, Science and Space, Education And Internation News..</string>
    <string name="auth_to_continue">Login or Register To Continue...</string>
    <string name="login_btn_welcome">Login</string>
    <string name="register_btn_welcome">Register</string>
    <string name="welcome_text">Welcome CNN News Updates</string>
    <string name="todo">TODO</string>
    <string name="login_h1">News Updates</string>
    <string name="login_h2">Welcome Back</string>
    <string name="login_title">Login</string>
    <string name="no_account">Have No Account ?</string>
    <string name="create">Create</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="forgot_pw">Forgot Password ?</string>
    <string name="login_btn">Login</string>
    <string name="cnn_logo_des">cnn_logo</string>
    <string name="news_updates_h">News Updates</string>
    <string name="join_today">Join Today</string>
    <string name="register_title">Register</string>
    <string name="have_account">Have An Account ?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="dec">description</string>
    <string name="user_name">User Name</string>
    <string name="email_hint">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="business_news">Business News</string>
    <string name="entertainment_news">Entertainment News</string>
    <string name="health_news">Health News</string>
    <string name="warning">Warning</string>
    <string name="accept">Are You Sure You Want to Logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="sports_news">Sports News</string>
    <string name="life_style_news">Life Style News</string>
    <string name="technology_news">Technology News</string>
    <string name="news_u_s">News U.S</string>
    <string name="headlines">Headlines</string>
    <string name="check">Check News Updates And Trends</string>
    <string name="news_title">Trending Title of the Details</string>
    <string name="news_title_home">Daily US \n News + Updates</string>
    <string name="exit">Exit</string>
</resources>