<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cnn_bg"
    tools:context=".LandingActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha=".70"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/ic_bg_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/cnn_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/cnn_logo"
                android:contentDescription="@string/todo"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/arimo"
            android:text="@string/welcome_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/aladin"
            android:padding="10dp"
            android:text="@string/welcome_text1"
            android:textColor="@color/dark_red"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/arimo"
            android:text="@string/welcome_text2"
            android:textAlignment="center"
            android:textColor="@color/teal_200"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/arimo"
            android:text="@string/welcome_text3"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/arimo"
            android:text="@string/welcome_sports"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10sp"
            android:fontFamily="@font/arimo"
            android:text="@string/welcome_text5"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/arimo"
            android:text="@string/auth_to_continue"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp">

            <Button
                android:id="@+id/loginButton"
                android:layout_width="72dp"
                android:layout_height="35dp"
                android:background="@drawable/btn_bg"
                android:text="@string/login_btn_welcome"
                android:textSize="8sp"
                tools:ignore="SmallSp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/arimo"
                android:layout_marginEnd="10dp"
                android:textAllCaps="false"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:id="@+id/registerButton"
                android:layout_width="72dp"
                android:layout_height="35dp"
                android:backgroundTint="@color/dark_red"
                android:background="@drawable/btn_bg"
                android:text="@string/register_btn_welcome"
                android:textSize="8sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="@font/arimo"
                tools:ignore="SmallSp"
                android:textAllCaps="false"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>